--- a/install.ini
+++ b/install.ini
@@ -1,7 +1,7 @@
 [install.ini]
 domain=my-magento-2-webshop.com
 base_url=http://my-magento-2-webshop.com/
-magento_release=2.2.0
+magento_release=2.2.5
 
 database_host=localhost
 database_name=magento2
@@ -14,8 +14,8 @@ linux_magento_user_pass=magento
 magento_connect_public_key=123456789
 magento_connect_private_key=123456789
 
-language_code=en_US
-currency_code=USD
+language_code=en_US,ru_RU
+currency_code=USD,UAH
 
 admin_login_name=admin
 admin_login_pass=admin123
